llama/chat-ollama-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chat-ollama
  namespace: llama
  labels:
    app: chat-ollama
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 11434
      protocol: TCP
      targetPort: 11434
  selector:
    app: ollama
