llama/qwen-summarizer-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qwen-summarizer-llm
  namespace: llama
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8001
  selector:
    app: qwen-summarizer
  sessionAffinity: None
