llama/rocm-llamacpp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: llama-rocm-api
  namespace: llama
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: llamacpp-rocm
  sessionAffinity: None
